--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "boilerplate",
-  "description": "boilerplate",
+  "name": "@nemoventures/adonis-clickhouse",
+  "description": "Clickhouse client for AdonisJS",
   "version": "0.0.0",
   "engines": {
     "node": ">=20.6.0"
@@ -13,7 +13,8 @@
     "!build/tests"
   ],
   "exports": {
-    ".": "./build/index.js"
+    ".": "./build/index.js",
+    "./types": "./build/src/types.js"
   },
   "scripts": {
     "clean": "del-cli build",
@@ -37,7 +38,6 @@
     "@adonisjs/core": "^6.17.2",
     "@adonisjs/eslint-config": "^2.0.0",
     "@adonisjs/prettier-config": "^1.4.0",
-    "@adonisjs/redis": "^9.2.0",
     "@adonisjs/tsconfig": "^1.4.0",
     "@japa/assert": "^4.0.1",
     "@japa/runner": "^4.2.0",
@@ -49,6 +49,7 @@
     "eslint": "^9.20.1",
     "np": "^10.0.6",
     "prettier": "^3.5.1",
+    "prettier-edgejs": "^0.2.35",
     "ts-node-maintained": "^10.9.5",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3"
@@ -77,7 +78,8 @@
   },
   "tsup": {
     "entry": [
-      "index.ts"
+      "./index.ts",
+      "./src/types.ts"
     ],
     "outDir": "./build",
     "clean": true,
@@ -85,5 +87,9 @@
     "dts": false,
     "sourcemap": true,
     "target": "esnext"
+  },
+  "dependencies": {
+    "@clickhouse/client": "^1.10.1",
+    "@poppinss/utils": "^6.9.2"
   }
 }
